@@ -28,6 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [rla] Feature [#11655] Search now allows to select partial or full value match.
 * First stable release.
  </notes>
  <contents>
@@ -386,6 +387,7 @@
    <date>2012-10-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [rla] Feature [#11655] Search now allows to select partial or full value match.
 * First stable release.
    </notes>
   </release>
